# polars-sdist

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
benchmarks/: bench_distributions.py
python/polars_sdist/: __init__.py  _polars_sdist.pyi  _utils.py  distributions.py  sampling.py
src/: lib.rs  utils.rs
src/distributions/: continuous.rs  discrete.rs  mod.rs  sampling.rs
tests/: test_distributions.py  test_sampling.py
