[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "polars-sdist"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = ["polars>=1.0"]

[project.optional-dependencies]
dev = ["pytest>=8", "scipy>=1.14", "maturin>=1.7"]

[tool.maturin]
module-name = "polars_sdist._polars_sdist"
python-source = "python"
features = ["pyo3/extension-module"]

[tool.pytest.ini_options]
testpaths = ["tests"]
